# homepage

./: .gitignore  about.md  default.nix  index.html  index.md  shell.nix  site.cabal  site.hs
Hakyll/: Netogallo.hs  Polysemy.hs  Repository.hs  Sass.hs  Zero.hs
Hakyll/Netogallo/: Directory.hs
Hakyll/Polysemy/: ExternalResourceCache.hs  Metadata.hs
css/: default.css  default.sass
posts/: 01-context-managing.md
projects/telescope-histon/: index.md
projects/telescope-histon/entries/: 01-initial-project-setup.md  setup.md
templates/: default.html  entry.html  index.html  previews.html  project.html  projects.html
