name:               site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  other-modules:    Hakyll.Netogallo
                  , Hakyll.Netogallo.Directory
                  , Hakyll.Polysemy
                  , Hakyll.Polysemy.ExternalResourceCache
                  , Hakyll.Polysemy.Metadata
                  , Hakyll.Repository
                  , Hakyll.Sass
                  , Hakyll.Zero
  build-depends:    base == 4.*
                  , aeson == 2.1.*
                  , extra == 1.7.*
                  , filepath == 1.4.*
                  , hakyll == 4.16.*
                  , hashable == 1.4.*
                  , http-client == 0.7.*
                  , http-conduit == 2.3.*
                  , http-download == 0.2.* 
                  , lens == 5.2.*
                  , pandoc == 3.1.*
                  , path == 0.9.*
                  , polysemy == 1.9.*
                  , process == 1.6.*
                  , rio == 0.1.22.*
                  , rio-prettyprint == 0.1.8.*
                  , text == 2.0.*
                  , type-errors == 0.2.*
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  extensions:       OverloadedStrings
                    , NoImplicitPrelude
                    , DataKinds
                    , FlexibleContexts
                    , GADTs
                    , LambdaCase
                    , PolyKinds
                    , RankNTypes
                    , ScopedTypeVariables
                    , TypeApplications
                    , TypeOperators
                    , TypeFamilies
